# tillitis-key1-apps

./: go.mod
apps/: Makefile  rust-toolchain.toml
apps/blink-rs/: Cargo.toml  build.rs  build.sh
apps/blink-rs/.cargo/: config.toml
apps/blink-rs/src/: lib.rs
