[package]
name = "blink-rs"
version = "0.1.0"
edition = "2021"

[lib]
name       = "app"
test       = false
bench      = false
crate-type = ["bin"]

[dependencies]
bumpalo = { version = "3.13.0", features = ["allocator_api", "boxed"] }

[dependencies.k256]
version = "0.13.1"
default-features = false
features = ["ecdsa", "alloc"]
